--- a/examples/torch-resnet-kserve/example6/inference_service.yaml
+++ b/examples/torch-resnet-kserve/example6/inference_service.yaml
@@ -37,6 +37,5 @@ spec:
         configMap:
           name: tfserving-resnet-cm
       - name: tfserving-models-vol
-        nfs:
-          server: 192.5.86.160
-          path: /fileshare/tensorflow_resnet_b64
+        hostPath:
+          path: /nfsbulk/hsiar/tensorflow_resnet_b64
